--- a/app/Rmd/report_planning_EN.Rmd
+++ b/app/Rmd/report_planning_EN.Rmd
@@ -1,6 +1,6 @@
 ## **AREAS DESIGNATED FOR SPATIAL PLANNING**
 
-This section describes information relevant to spatial planning from a variety of sources. Area-specific outputs are provided in sub-sections labeled according to the data source. Descriptions of the source data and appropriate references and contacts are provided at the beginning of each sub-section.
+This module describes information relevant to spatial planning from a variety of sources. Area-specific outputs are provided in sub-sections labelled according to each data source. Data descriptions, references and contact information are provided at the beginning of each sub-section.
 
 ### **Ecologically and Biologically Significant Areas (EBSA)**
 
@@ -11,7 +11,7 @@ load_rdata(c("ebsa_rr"), "MAR", env = environment())
 ```{r EBSA-meta, results='asis'}
 write_meta(ebsa_rr, "EN")
 ```
-EBSA Story Map: <https://gisp.dfo-mpo.gc.ca/portal/apps/MapJournal/index.html?appid=b91f85de60f44a7b90633e4b43e3916a>
+A Story Map summarizing work that has been done to identify EBSA in the Maritimes Region is available here: https://gisp.dfo-mpo.gc.ca/portal/apps/MapJournal/index.html?appid=b91f85de60f44a7b90633e4b43e3916a
 
 Dataset description from the Open Data record [@OpenData_ebsa]:
 ```{r EBSA-text, results='asis'}
@@ -43,13 +43,13 @@ if (!is.null(EBSATable)){
 }
 ```
 
-```{r EBSA-region-plot, fig.height=8, fig.width=11, fig.cap= 'Quality Tier: High. Security level: none. Map showing Ecologically and Biologically Significant Areas (EBSA) relative to the search area defined by the user (red outline).'}
+```{r EBSA-region-plot, fig.height=8, fig.width=11, fig.cap= 'Quality tier: High. Security level: none. Map showing Ecologically and Biologically Significant Areas (EBSA) relative to the search area defined by the user (red outline).'}
 if (!is.null(EBSAoutput$regionData)){
   plot_rr_sf(regionMap, EBSAoutput$regionData, ebsa_rr$attribute)
 }
 ```
 
-```{r EBSA-area-plot, fig.height=8, fig.width=11, fig.cap= 'Quality Tier: High. Security level: none. Map showing Ecologically and Biologically Significant Areas (EBSA) in the search area defined by the user (red outline).'}
+```{r EBSA-area-plot, fig.height=8, fig.width=11, fig.cap= 'Quality Tier: High. Security level: none. Map showing Ecologically and Biologically Significant Areas (EBSA) in the search area (red outline).'}
 if(!is.null(EBSAoutput$studyData)){
   plot_rr_sf(areaMap, EBSAoutput$mapData, ebsa_rr$attribute)
 }
