--- a/app/Rmd/report_planning_EN.Rmd
+++ b/app/Rmd/report_planning_EN.Rmd
@@ -49,7 +49,7 @@ if (!is.null(EBSAoutput$regionData)){
 }
 ```
 
-```{r EBSA-area-plot, fig.height=8, fig.width=11, fig.cap= 'Quality Tier: High. Security level: none. Map showing Ecologically and Biologically Significant Areas (EBSA) in the search area (red outline).'}
+```{r EBSA-area-plot, fig.height=8, fig.width=11, fig.cap= 'Quality tier: High. Security level: none. Map showing Ecologically and Biologically Significant Areas (EBSA) in the search area (red outline).'}
 if(!is.null(EBSAoutput$studyData)){
   plot_rr_sf(areaMap, EBSAoutput$mapData, ebsa_rr$attribute)
 }
@@ -97,14 +97,14 @@ mpaCheckOuput <- if(!is.null(mpaClipped$studyData)){
 writeLines(mpaCheckOuput)
 ```
 
-```{r mpa-region-plot, fig.height=8, fig.width=11, fig.cap= 'Quality Tier: High. Security level: none.Map of the Draft Conservation Network Design for the Scotian Shelf-Bay of Fundy Bioregion. Boundaries of the proposed new sites are preliminary and subject to change following engagement and consultation. '}
+```{r mpa-region-plot, fig.height=8, fig.width=11, fig.cap= 'Quality tier: High. Security level: none.Map of the Draft Conservation Network Design for the Scotian Shelf-Bay of Fundy Bioregion. Boundaries of the proposed new sites are preliminary and subject to change following engagement and consultation. '}
 if (!is.null(mpaClipped$regionData)){
   plot_rr_sf(regionMap, mpaClipped$regionData, conservationSites_rr$attribute, outlines=FALSE, colorMap = mpaCols,
                             alphaMap = mpaAlphas)
 }
 ```
 
-```{r mpa-area-plot, fig.height=8, fig.width=11, fig.cap= 'Quality Tier: High. Security level: none. Map of the Draft Conservation Network Design in the search area defined by the user (red outline). Please see table below for names of each specific area. Boundaries of the proposed new sites are preliminary and subject to change following engagement and consultation.'}
+```{r mpa-area-plot, fig.height=8, fig.width=11, fig.cap= 'Quality tier: High. Security level: none. Map of the Draft Conservation Network Design in the search area defined by the user (red outline). Please see table below for names of each specific area. Boundaries of the proposed new sites are preliminary and subject to change following engagement and consultation.'}
 if(!is.null(mpaClipped$studyData)){
   mpaStudyLabels <- filter(st_centroid(mpaClipped$mapData), Id > 0) %>% dplyr::select(c("Id"))
 
@@ -115,6 +115,6 @@ if(!is.null(mpaClipped$studyData)){
 
 ```{r mpa-table, echo=FALSE, results='asis', caption="MPA table"}
 if (!is.null(mpaTable)) {
-  knitr::kable(mpaTable, align="l", caption="Quality Tier: High Security level: none. Area and names of spatial conservation areas that overlap the search area.</b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+  knitr::kable(mpaTable, align="l", caption="Quality tier: High Security level: none. Area and names of spatial conservation areas that overlap the search area.</b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 }
 ```
