--- a/app/Rmd/intro_EN.Rmd
+++ b/app/Rmd/intro_EN.Rmd
@@ -76,7 +76,7 @@ For more information about this report, please contact Quentin.Stoyel@dfo-mpo.gc
 
 ##### *Background*
 
-This document compiles and summarizes regional data to increase reporting efficiency and facilitate more time-effective decision making. In response to repeat requests for available data, this report has been developed as an automated tool to document all available data within a user-defined area of interest. This helps streamline the process of generating science information and advice relevant to a variety of cross-sectoral departmental assessments, regulatory reviews, and reporting activities and is intended to provide information for various applications including aquaculture management, resource management, marine planning and conservation, emergency response, the Fish and Habitat Protection Program, and the Species at Risk program. 
+This document compiles and summarizes regional data to increase reporting efficiency and facilitate more time-effective decision making. In response to repeat requests for available data, this report has been developed as an automated tool to document all available data within a user-defined search area. This helps streamline the process of generating science information and advice relevant to a variety of cross-sectoral departmental assessments, regulatory reviews, and reporting activities and is intended to provide information for various applications including aquaculture management, resource management, marine planning and conservation, emergency response, the Fish and Habitat Protection Program, and the Species at Risk program. 
 
 The datasets summarized in this report have been compiled from a variety of sources including internal DFO databases, governmental and academic research labs, and open-source databases. This report will be continuously updated as new sources become available. These data comprise a variety of types (e.g., points, vector datasets, raster information), with the primary focus being species presence. However, recognizing the importance of considering ecosystem-based approaches for management, this report also includes information on ecosystem components (e.g., coastal habitat), and areas designated for spatial planning (e.g., Ecologically and Biologically Significant Areas). 
 
@@ -109,7 +109,7 @@ The following are definitions relevant for species listed by the Species at Risk
 
 ##### *Disclaimers*
 
-This report is intended to provide a first-order view of the data available within the area of interest. Users are requested to review the caveats and disclaimers below to use information appropriately. 
+This report is intended to provide a first-order view of the data available within the search area. Users are requested to review the caveats and disclaimers below to use information appropriately. 
 
 - This document is a tool to support, not to replace, Science advice and peer-review processes.
 - This report does not endeavor to describe every source of information available; the data presented does not represent all available data within the search area and additional information may be available from other sources, or more recent data may be available than what is presented here.
@@ -117,13 +117,13 @@ This report is intended to provide a first-order view of the data available with
   - Access the original data source if more information is required,
   - Circulate this document to all contacts outlined in the different sections of the report for each data source, to ensure the veracity of inference drawn from the report, and to provide any supplemental information that may support the provision of science advice. 
 -	The focus of this report is on available observations of species presence and not on absences, quantities (e.g., species abundance or biomass), frequency, or catch information.
--	The absence of a species in this report should be interpreted as an absence of observation or reporting of the species within the user-defined area of interest,  not necessarily as a true absence of the species.
+-	The absence of a species in this report should be interpreted as an absence of observation or reporting of the species within the user-defined search area, not necessarily as a true absence of the species.
 -	Unless otherwise specified, data were queried from 2010 to present. This was selected as an arbitrary time range to present the most recent information. Please contact data providers if data outside of these ranges are required. 
 -	Current outputs of species observations in the report aggregate all years in summary plots and tables (e.g. 2010-2021). Annual summaries are not displayed. If you require annual summaries or other information beyond species presence, please contact relevant data providers/custodians for each data source.
 -	All maps in this report are for informational purposes and are not suitable for legal or surveying purposes. Maps represent only the approximate location of boundaries.
 -	This report is intended for internal DFO use only. Privacy screening (i.e., the rule of 5) is not yet integrated into all data products and summaries generated by the report.
 -	Outputs of this report are not suitable for real-time, dynamic spatial planning.
--	Because coastal areas of the Scotian Shelf bioregion are generally not adequately sampled to characterize fine-scale ecological characteristics (i.e., species, habitat composition and variability within a sub-regional focal area), the distribution of (some) species featured within the report, when the area of interest is near to the coast, should be used as a first-order estimate limited by the spatial-temporal resolution of available data.
+-	Because coastal areas of the Scotian Shelf bioregion are generally not adequately sampled to characterize fine-scale ecological characteristics (i.e., species, habitat composition and variability within a sub-regional focal area), the distribution of (some) species featured within the report, when the search area is near to the coast, should be used as a first-order estimate limited by the spatial-temporal resolution of available data.
 
 ##### *Data Access & Quality Tiers*
 
@@ -160,13 +160,15 @@ knitr::kable(table_tier,align="l",
 <!-- GENERIC END -->
 ## **REGIONAL SYNTHESIS**
 
-This section provides an overall synthesis of regional data and data products of human activities and species contained within the search area that are listed by the Species At Risk Act (SARA), and/or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). This summary must be used in coordination with all data summaries and products presented throughout the report, including the descriptions, caveats, disclaimers, sources of uncertainty, references to the literature, and contacts who can provide further interpretation. This section is not intended to provide the data itself, but to summarize what is available. Users are encouraged to access the original data source if more information is required.
+This section provides an overall synthesis of regional data and data products of human activities and species contained within the search area. This summary must be used in coordination with all the information presented throughout the report, including the descriptions, caveats, disclaimers, sources of uncertainty, references to the literature, and contacts who can provide further interpretation. This section is not intended to provide the data itself, but to summarize what is available. Users are encouraged to access the original data source if more information is required.
 
 ### **Multi-Threat Synthesis**
 
+This section summarizes available information of human activities and human threats in the search area, as well as relevant information relevant for species listed by SARA, and/or assessed by COSEWIC. Outputs are not suitable for real-time, dynamic spatial planning. 
+
 #### *Interactive Output*
 
-TBA!
+This section summarizes available information of human activities in the search area, per each data source presented in this report. Please contact data providers if data outside of these ranges are required. Outputs are not suitable for real-time, dynamic spatial planning.
 
 #### *Literature Review*
 
@@ -174,7 +176,7 @@ TBA!
 
 ### **Multi-Species Synthesis**
 
-The focus of this synthesis is on available observations of presence of species listed by SARA, and/or assessed by COSEWIC, per each data source. The absence of a species in this report should be interpreted as an absence of observation or reporting of the species within the user-defined area of interest, not necessarily as a true absence of the species. Unless otherwise specified, data were queried from 2010 to present. Please contact data providers if data outside of these ranges are required. Outputs are not suitable for real-time, dynamic spatial planning. 
+This section summarizes available information of presence of species in the search area listed by SARA, and/or assessed by COSEWIC, per each data source presented in this report. The absence of a species in this report should be interpreted as an absence of observation or reporting of the species within the search area, not necessarily as a true absence of the species. Unless otherwise specified, data were queried from 2010 to present. Please contact data providers if data outside of these ranges are required. Outputs are not suitable for real-time, dynamic spatial planning. 
 
 ```{r sar-obs-summary-table}
 absentCode <- "&nbsp;-&nbsp;"
