--- a/app/Rmd/report_fish_EN.Rmd
+++ b/app/Rmd/report_fish_EN.Rmd
@@ -117,7 +117,7 @@ pasBayCheck <- if (!is.null(pasBayClipped$studyData)) {
 writeLines(noquote(pasBayCheck))
 ```
 
-```{r pasBay-plot, fig.height=8, fig.width=11, fig.cap= 'Quality Tier: High. Security level: None. Map showing the search area defined by the user (red outline) used to query information from the Passamaquoddy Bay Biodiversity Trawls.  Blue lines indicate the location of each trawl sample.'}
+```{r pasBay-plot, fig.height=8, fig.width=11, fig.cap= 'Quality tier: High. Security level: None. Map showing the search area defined by the user (red outline) used to query information from the Passamaquoddy Bay Biodiversity Trawls.  Blue lines indicate the location of each trawl sample.'}
 
 if (!is.null(pasBayClipped$studyData)) {
     plot_rr_sf(areaMap, pasBayClipped$mapData, lwd = 0.7, colour = "blue")
@@ -127,14 +127,14 @@ if (!is.null(pasBayClipped$studyData)) {
 ```{r pasBay-SAR-table}
 if (!is.null(pasBayClipped$studyData)) {
   if (nrow(pasBaySarTable) > 0) {
-    knitr::kable(pasBaySarTable, align="l", caption="\\label{tab:pasBay_SAR_table}Quality Tier: High. Security level: None. Passamaquoddy Bay Biodiversity Trawl observation records of species contained within the search area and listed by the Species At Risk Act (SARA), or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. </b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+    knitr::kable(pasBaySarTable, align="l", caption="\\label{tab:pasBay_SAR_table}Quality tier: High. Security level: None. Passamaquoddy Bay Biodiversity Trawl observation records of species contained within the search area and listed by the Species At Risk Act (SARA), or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. </b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
   }
 }
 ```
 <br>
 ```{r pasBay-all-table}
 if (!is.null(pasBayClipped$studyData)) {
-knitr::kable(pasBayAllTable, align="l", caption="\\label{tab:pasBay_all_table}Quality Tier: High. Security level: none. Passamaquoddy Bay Biodiversity Trawl observation records of all species contained within the search area, summarized by species or species group. The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. </b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+knitr::kable(pasBayAllTable, align="l", caption="\\label{tab:pasBay_all_table}Quality tier: High. Security level: none. Passamaquoddy Bay Biodiversity Trawl observation records of all species contained within the search area, summarized by species or species group. The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. </b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 }
 ```
 
@@ -175,7 +175,7 @@ writeLines(noquote(iltsCheck))
 ```
 
 
-```{r ilts-plot, fig.height=8, fig.width=11, fig.cap= 'Quality Tier: High. Security level: Protected B. Map showing the search area defined by the user (red outline) used to query information from the Lobster Trawl Survey. Blue lines indicate the location of each NEST trawl sample.'}
+```{r ilts-plot, fig.height=8, fig.width=11, fig.cap= 'Quality tier: High. Security level: Protected B. Map showing the search area defined by the user (red outline) used to query information from the Lobster Trawl Survey. Blue lines indicate the location of each NEST trawl sample.'}
 
 if (!is.null(iltsClipped$studyData)) {
     plot_rr_sf(areaMap, iltsClipped$mapData, lwd = 1, colour = "blue")
@@ -185,14 +185,14 @@ if (!is.null(iltsClipped$studyData)) {
 ```{r ilts-SAR-table}
 if (!is.null(iltsClipped$studyData)) {
   if (nrow(iltsSarTable) > 0) {
-    knitr::kable(iltsSarTable, align="l", caption="\\label{tab:ilts_SAR_table}Quality Tier: High. Security level: Protected B. Inshore Lobster Trawl Survey (ITLS) observation records of species contained within the search area and listed by the Species At Risk Act (SARA), or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. </b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+    knitr::kable(iltsSarTable, align="l", caption="\\label{tab:ilts_SAR_table}Quality tier: High. Security level: Protected B. Inshore Lobster Trawl Survey (ITLS) observation records of species contained within the search area and listed by the Species At Risk Act (SARA), or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. </b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
   }
 }
 ```
 <br>
 ```{r ilts-all-table}
 if (!is.null(iltsClipped$studyData)) {
-knitr::kable(iltsAllTable, align="l", caption="\\label{tab:ilts_all_table}Quality Tier: High. Security level: Protected B. Inshore Lobster Trawl Survey (ITLS) observation records of all species contained within the search area, summarized by species or species group. The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. </b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+knitr::kable(iltsAllTable, align="l", caption="\\label{tab:ilts_all_table}Quality tier: High. Security level: Protected B. Inshore Lobster Trawl Survey (ITLS) observation records of all species contained within the search area, summarized by species or species group. The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. </b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 }
 ```
 
@@ -374,7 +374,7 @@ sturgCheck <- if (is.null(sturgOutputList$studyData)) {
 writeLines(noquote(sturgCheck))
 ```
 
-```{r sturg-plot, fig.height=8, fig.width=11, fig.cap='Quality Tier: High. Security level: none. Survey sites illustrating Atlantic Sturgeon Foraging Areas sampled during 2020 in the Upper Bay of Fundy. Note that this map mostly represents survey sites. This map should not be interpreted as a comprehensive list of Atlantic Sturgeon foraging areas as additional locations are available, although not yet sampled, in the upper Bay of Fundy.  '}
+```{r sturg-plot, fig.height=8, fig.width=11, fig.cap='Quality tier: High. Security level: none. Survey sites illustrating Atlantic Sturgeon Foraging Areas sampled during 2020 in the Upper Bay of Fundy. Note that this map mostly represents survey sites. This map should not be interpreted as a comprehensive list of Atlantic Sturgeon foraging areas as additional locations are available, although not yet sampled, in the upper Bay of Fundy.  '}
 if (!is.null(sturgOutputList$studyData)) {
   plot_rr_sf(areaMap, sturgOutputList$mapData, sturg_rr$attribute, outlines=FALSE,
              labelData=sturgOutputList$mapData, labelAttribute = "siteId")
@@ -387,7 +387,7 @@ if (!is.null(sturgOutputList$studyData)) {
   st_geometry(sturgTable) <- NULL
   row.names(sturgTable) <- NULL
   names(sturgTable) <- c("Site Id", "Site")
-  knitr::kable(sturgTable, align="l", caption="Quality Tier: High Security level: none. Names of Survey sites for Atlantic Sturgeon Foraging Areas sampled during 2020.</b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+  knitr::kable(sturgTable, align="l", caption="Quality tier: High Security level: none. Names of Survey sites for Atlantic Sturgeon Foraging Areas sampled during 2020.</b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 }
 ```
 
