--- a/app/Rmd/report_fish_EN.Rmd
+++ b/app/Rmd/report_fish_EN.Rmd
@@ -136,14 +136,14 @@ if (!is.null(pasBayClipped$studyData)) {
 ```{r pasBay-SAR-table}
 if (!is.null(pasBayClipped$studyData)) {
   if (nrow(pasBaySarTable) > 0) {
-    knitr::kable(pasBaySarTable, align="l", caption="\\label{tab:pasBay_SAR_table}Quality tier: High. Security level: None. Passamaquoddy Bay Biodiversity Trawl observation records of species contained within the search area and listed by the Species At Risk Act (SARA), or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. </b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+    knitr::kable(pasBaySarTable, align="l", caption=paste("\\label{tab:pasBay_SAR_table}", write_caption_blurb(pasBay_rr, "EN"), "Passamaquoddy Bay Biodiversity Trawl observation records of species contained within the search area and listed by the Species At Risk Act (SARA), or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. </b>"), booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
   }
 }
 ```
 <br>
 ```{r pasBay-all-table}
 if (!is.null(pasBayClipped$studyData)) {
-knitr::kable(pasBayAllTable, align="l", caption="\\label{tab:pasBay_all_table}Quality tier: High. Security level: none. Passamaquoddy Bay Biodiversity Trawl observation records of all species contained within the search area, summarized by species or species group. The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. </b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+knitr::kable(pasBayAllTable, align="l", caption=paste("\\label{tab:pasBay_all_table}", write_caption_blurb(pasBay_rr, "EN"), "Passamaquoddy Bay Biodiversity Trawl observation records of all species contained within the search area, summarized by species or species group. The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. </b>"), booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 }
 ```
 
@@ -194,14 +194,14 @@ if (!is.null(iltsClipped$studyData)) {
 ```{r ilts-SAR-table}
 if (!is.null(iltsClipped$studyData)) {
   if (nrow(iltsSarTable) > 0) {
-    knitr::kable(iltsSarTable, align="l", caption="\\label{tab:ilts_SAR_table}Quality tier: High. Security level: Protected B. Inshore Lobster Trawl Survey (ITLS) observation records of species contained within the search area and listed by the Species At Risk Act (SARA), or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. </b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+    knitr::kable(iltsSarTable, align="l", caption=paste("\\label{tab:ilts_SAR_table}", write_caption_blurb(ilts_rr, "EN"),  "Inshore Lobster Trawl Survey (ITLS) observation records of species contained within the search area and listed by the Species At Risk Act (SARA), or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. </b>"), booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
   }
 }
 ```
 <br>
 ```{r ilts-all-table}
 if (!is.null(iltsClipped$studyData)) {
-knitr::kable(iltsAllTable, align="l", caption="\\label{tab:ilts_all_table}Quality tier: High. Security level: Protected B. Inshore Lobster Trawl Survey (ITLS) observation records of all species contained within the search area, summarized by species or species group. The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. </b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+knitr::kable(iltsAllTable, align="l", caption=paste("\\label{tab:ilts_all_table}", write_caption_blurb(ilts_rr, "EN"), "Inshore Lobster Trawl Survey (ITLS) observation records of all species contained within the search area, summarized by species or species group. The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. </b>"), booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 }
 ```
 
@@ -284,22 +284,22 @@ if (!is.null(outputListI$studyData) & !is.null(outputListM$studyData)) {
 ```
 ```{r isdb-SAR-table}
 if (!is.null(outputListI$studyData)) {
-knitr::kable(isdbSarTable, align="l", caption="Quality tier: Medium. Security level: Protected B. Industry Survey Database (ISDB) records of species observed within the search area and listed by the <i>Species at Risk Act</i> (SARA), or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>", booktabs = T, escape = F, linesep="")} %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+knitr::kable(isdbSarTable, align="l", caption=paste(write_caption_blurb(isdb_rr, "EN"), "Industry Survey Database (ISDB) records of species observed within the search area and listed by the <i>Species at Risk Act</i> (SARA), or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>"), booktabs = T, escape = F, linesep="")} %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 ```
 <br><br>
 ```{r isdb-all-table}
 if (!is.null(outputListI$studyData)) {
-  knitr::kable(isdbAllTable, align="l", caption="Quality tier: Medium. Security level: Protected B. Industry Survey Database (ISDB) records of <u>all species</u> observed within the search area, summarized by species or species group. Records do not necessarily correspond to number of individuals. <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>", booktabs = T, escape = F, linesep="")} %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+  knitr::kable(isdbAllTable, align="l", caption=paste(write_caption_blurb(isdb_rr, "EN"), "Industry Survey Database (ISDB) records of <u>all species</u> observed within the search area, summarized by species or species group. Records do not necessarily correspond to number of individuals. <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>"), booktabs = T, escape = F, linesep="")} %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 ```
 
 ```{r marfis-SAR-table}
 if (!is.null(outputListM$studyData)) {
-  knitr::kable(marfisSarTable, align="l", caption="Quality tier: Medium. Security level: Protected B. Maritimes Fishery Information System (MARFIS) records of species observed within the search area and listed by the <i>Species At Risk Act</i> (SARA), or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>", booktabs = T, escape = F, linesep="")} %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+  knitr::kable(marfisSarTable, align="l", caption=paste(write_caption_blurb(marfis_rr, "EN"), "Maritimes Fishery Information System (MARFIS) records of species observed within the search area and listed by the <i>Species At Risk Act</i> (SARA), or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>"), booktabs = T, escape = F, linesep="")} %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 ```
 <br><br>
 ```{r marfis-all-table}
 if (!is.null(outputListM$studyData)) {
-  knitr::kable(marfisAllTable, caption="Quality tier: Medium. Security level: Protected B. Maritimes Fishery Information System (MARFIS) records of <u>all species</u> observed within the search area, summarized by species or species group. <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>", booktabs = T, escape = F, linesep="")  %>% column_spec(1, width="15cm")
+  knitr::kable(marfisAllTable, caption=paste(write_caption_blurb(marfis_rr, "EN"), "Maritimes Fishery Information System (MARFIS) records of <u>all species</u> observed within the search area, summarized by species or species group. <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>"), booktabs = T, escape = F, linesep="")  %>% column_spec(1, width="15cm")
 } %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 ```
 
@@ -342,7 +342,7 @@ if (!is.null(outputList$studyData)) {
 ```
 ```{r obis-table, echo=FALSE, results='asis', caption="Priority species with observations contained in the OBIS database within the search polygon area."}
 if (!is.null(outputList$studyData)) {
-  knitr::kable(obisTable, align="l", caption="Quality tier: Medium. Security level: none. Ocean Biodiversity Information System (OBIS) observation records of species contained within the search area and listed by the <i>Species At Risk Act</i> (SARA), or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). <b>The absence of a species in this figure should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+  knitr::kable(obisTable, align="l", caption=paste(write_caption_blurb(obisFish_rr, "EN"), "Ocean Biodiversity Information System (OBIS) observation records of species contained within the search area and listed by the <i>Species At Risk Act</i> (SARA), or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). <b>The absence of a species in this figure should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>"), booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 }
 ```
 
@@ -388,13 +388,13 @@ if (!is.null(sturgOutputList$studyData)) {
 }
 ```
 
-```{r sturg-table, echo=FALSE, results='asis', caption="MPA table"}
+```{r sturg-table, echo=FALSE, results='asis'}
 if (!is.null(sturgOutputList$studyData)) {
   sturgTable <- dplyr::select(sturgOutputList$mapData, c("siteId", "Site"))
   st_geometry(sturgTable) <- NULL
   row.names(sturgTable) <- NULL
   names(sturgTable) <- c("Site Id", "Site")
-  knitr::kable(sturgTable, align="l", caption="Quality tier: High Security level: none. Names of Survey sites for Atlantic Sturgeon Foraging Areas sampled during 2020.</b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+  knitr::kable(sturgTable, align="l", caption=paste(write_caption_blurb(sturg_rr, "EN"), "Names of Survey sites for Atlantic Sturgeon Foraging Areas sampled during 2020.</b>"), booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 }
 ```
 
