--- a/sections/sturg/sturg_en.Rmd
+++ b/sections/sturg/sturg_en.Rmd
@@ -1,3 +1,19 @@
+
+---
+output:
+  bookdown::html_document2:
+    number_sections: FALSE
+    theme: paper
+bibliography: '`r here::here("app/data/mybiblio.bib")`'
+---
+```{r child = here::here("sections/commonSections/commonIntro.Rmd")}
+if (FALSE) { #load in data:
+  lapply(list.files(here::here("app/R"), pattern = ".[Rr]$", full.names = TRUE), source)
+  studyArea <- sf::st_read(here::here("app/output/geoms_slc.geojson")) 
+  intro_setup(studyArea, env = environment())  
+}
+```
+
 ### **Atlantic Sturgeon Foraging Areas in the Upper Bay of Fundy ** {#sturg-section}
 ```{r sturg-load, include=FALSE}
 load_rdata(c("sturg_rr"), "MAR", env = environment())
