--- a/app/Rmd/report_fish_EN.Rmd
+++ b/app/Rmd/report_fish_EN.Rmd
@@ -8,24 +8,24 @@ editor_options:
 
 This module describes outputs of fish and marine invertebrates derived from a variety of data sources, internal and external to DFO. Species that have been listed under the Species at Risk Act (SARA), or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC), are summarized in independent tables. Area-specific outputs are provided in sub-sections labelled according to each data source. Data descriptions, references and contact information are provided at the beginning of each sub-section.
 
-```{r child = here::here("app/Rmd/sections/rv.Rmd")}
+```{r child = here::here("sections/rv/rv_en.Rmd")}
 ```
 
-```{r child = here::here("app/Rmd/sections/pasBay.Rmd")}
+```{r child = here::here("sections/pasBay/pasBay_en.Rmd")}
 ```
 
-```{r child = here::here("app/Rmd/sections/ilts.Rmd")}
+```{r child = here::here("sections/ilts/ilts_en.Rmd")}
 ```
 
-```{r child = here::here("app/Rmd/sections/isdb-marfis.Rmd")}
+```{r child = here::here("sections/isdb-marfis/isdbMarfis_en.Rmd")}
 ```
 
-```{r child = here::here("app/Rmd/sections/obisFish.Rmd")}
+```{r child = here::here("sections/obis/obisFish_en.Rmd")}
 ```
 
-```{r child = here::here("app/Rmd/sections/sturg.Rmd")}
+```{r child = here::here("sections/sturg/sturg_en.Rmd")}
 ```
 
-```{r child = here::here("app/Rmd/sections/ocearch.Rmd")}
+```{r child = here::here("sections/ocearch/ocearch_en.Rmd")}
 ```
 
