--- a/app/Rmd/report_planning_EN.Rmd
+++ b/app/Rmd/report_planning_EN.Rmd
@@ -2,9 +2,9 @@
 
 This module describes information relevant to spatial planning from a variety of sources. Area-specific outputs are provided in sub-sections labelled according to each data source. Data descriptions, references and contact information are provided at the beginning of each sub-section.
 
-```{r child = here::here("app/Rmd/sections/ebsa.Rmd")}
+```{r child = here::here("sections/ebsa/ebsa_en.Rmd")}
 ```
 
-```{r child = here::here("app/Rmd/sections/conservationSites.Rmd")}
+```{r child = here::here("sections/conservationSites/conservationSites_en.Rmd")}
 ```
 
